# DevOp-Final

./: .gitignore  Jenkinsfile  Makefile  README.md
app/: .dockerignore  Dockerfile  pyproject.toml
app/api/: deps.py
app/api/routes/: items.py  system.py
app/core/: security.py
infra/ansible/playbooks/: deploy.yml
infra/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
infra/terraform/modules/compute/: main.tf
infra/terraform/templates/: inventory.ini.tftpl
terraform-setup/: .gitignore  main.tf  outputs.tf  variables.tf  versions.tf
terraform-setup/ansible/: inventory.ini
terraform-setup/ansible/playbooks/: server.yml
terraform-setup/templates/: cloud-init.yaml.tftpl  inventory.ini.tftpl
