[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.136.0",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "prometheus-client>=0.25.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.44.0",
    "cryptography>=46.0.7",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ruff>=0.15.11",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
